<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activity.AboutPage"
    android:background="#FFFFE0"

    >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/mypicture"
            app:civ_border_color="#22FFFFFF"
            app:civ_border_width="2dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="15dp"
            android:layout_gravity="center_horizontal"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/imageView"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/profile"
                android:gravity="center_horizontal"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/gmail"
                    android:layout_marginStart="15dp"
                    android:padding="5dp"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:text="@string/gmail"
                    android:gravity="center_horizontal"
                    android:layout_margin="8dp"
                    />





            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/phone"
                    android:layout_marginStart="15dp"
                    android:padding="5dp"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:text="@string/contact"
                    android:gravity="center_horizontal"
                    android:layout_margin="8dp"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/map"
                    android:layout_marginStart="15dp"
                    android:padding="5dp"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:text="@string/Address"
                    android:gravity="center_horizontal"
                    android:layout_margin="8dp"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/bank"
                    android:layout_marginStart="15dp"
                    android:padding="5dp"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:text="@string/Institute"
                    android:gravity="center_horizontal"
                    android:layout_margin="8dp"
                    />





            </LinearLayout>




        </LinearLayout>




    </RelativeLayout>


</RelativeLayout>