<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activity.ImportanceLink"
    android:background="@drawable/learning"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/baseline_menu_24"
        app:title="Importance Link"
        app:titleTextColor="@color/white"
        android:background="#4958dc"
        >

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:padding="1dp"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/link1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/white"
                android:elevation="4dp"
                app:cardPreventCornerOverlap="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="2dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    >


                    <ImageView
                        android:id="@+id/imageLink1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/gmail"
                        android:layout_marginStart="15dp"
                        android:padding="5dp"
                        android:layout_gravity="center_vertical"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:text="@string/technicalBoard"
                        android:gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:ellipsize="end"
                        />

                </LinearLayout>



            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/link2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/white"
                android:elevation="4dp"
                app:cardPreventCornerOverlap="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="2dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    >


                    <ImageView
                        android:id="@+id/imageLink2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/gmail"
                        android:layout_marginStart="15dp"
                        android:padding="5dp"
                        android:layout_gravity="center_vertical"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:text="@string/skill"
                        android:gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:ellipsize="end"
                        />





                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/link3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/white"
                android:elevation="4dp"
                app:cardPreventCornerOverlap="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="2dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    >


                    <ImageView
                        android:id="@+id/imageLink3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/gmail"
                        android:layout_marginStart="15dp"
                        android:padding="5dp"
                        android:layout_gravity="center_vertical"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:text="@string/ministry"
                        android:gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:ellipsize="end"
                        />





                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/link4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/white"
                android:elevation="4dp"
                app:cardPreventCornerOverlap="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="2dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    >


                    <ImageView
                        android:id="@+id/imageLink4"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/gmail"
                        android:layout_marginStart="15dp"
                        android:padding="5dp"
                        android:layout_gravity="center_vertical"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:text="@string/IDEB"
                        android:gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:ellipsize="end"
                        />





                </LinearLayout>



            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/link5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/white"
                android:elevation="4dp"
                app:cardPreventCornerOverlap="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="2dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    >


                    <ImageView
                        android:id="@+id/imageLink5"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/dte"
                        android:layout_marginStart="15dp"
                        android:padding="5dp"
                        android:layout_gravity="center_vertical"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:text="@string/directorate"
                        android:gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:ellipsize="end"
                        />





                </LinearLayout>



            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/link6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/white"
                android:elevation="4dp"
                app:cardPreventCornerOverlap="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="2dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    >


                    <ImageView
                        android:id="@+id/imageLink6"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/gmail"
                        android:layout_marginStart="15dp"
                        android:padding="5dp"
                        android:layout_gravity="center_vertical"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:text="@string/IEB"
                        android:gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:ellipsize="end"
                        />





                </LinearLayout>



            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/link7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/white"
                android:elevation="4dp"
                app:cardPreventCornerOverlap="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="2dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    >


                    <ImageView
                        android:id="@+id/imageLink7"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/gmail"
                        android:layout_marginStart="15dp"
                        android:padding="5dp"
                        android:layout_gravity="center_vertical"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:text="@string/BNP"
                        android:gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:ellipsize="end"
                        />





                </LinearLayout>



            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/link8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/white"
                android:elevation="4dp"
                app:cardPreventCornerOverlap="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="2dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    >


                    <ImageView
                        android:id="@+id/imageLink8"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/gmail"
                        android:layout_marginStart="15dp"
                        android:padding="5dp"
                        android:layout_gravity="center_vertical"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:text="@string/WZPDCL"
                        android:gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:ellipsize="end"
                        />





                </LinearLayout>



            </androidx.cardview.widget.CardView>








        </LinearLayout>
    </ScrollView>






</RelativeLayout>