<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activity.InstituteDetails"
    android:background="#2F4F4F"
    >

    <RelativeLayout

        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/topImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/learning"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/topText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="Details Title"
            android:gravity="center"
            android:ellipsize="end"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFC107"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:text="Introduction:"
                        android:layout_margin="8dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F44336"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="240dp"
                        />

                    <TextView
                        android:id="@+id/about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFC107"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="about"
                        android:layout_margin="8dp"
                        android:layout_gravity="start"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:text="INFORMATION"
                        android:layout_margin="8dp"
                        android:layout_gravity="center_horizontal"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="8dp"
                            android:src="@drawable/mypicture"
                            android:layout_marginStart="15dp"
                            android:padding="5dp"
                            />

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:textStyle="bold"
                            android:textSize="23sp"
                            android:text="Md.delowar Hossain"
                            android:gravity="center_horizontal"
                            android:layout_margin="8dp"
                            />

                    </LinearLayout>



                    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/gmail"
                        android:layout_marginStart="15dp"
                        android:padding="5dp"
                        />


                    <TextView
                        android:id="@+id/gmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:text="@string/gmail"
                        android:gravity="center_horizontal"
                        android:layout_margin="8dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/phone"
                        android:layout_marginStart="15dp"
                        android:padding="5dp"
                        />


                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:text="@string/contact"
                        android:gravity="center_horizontal"
                        android:layout_margin="8dp"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/map"
                        android:layout_marginStart="15dp"
                        android:padding="5dp"
                        />


                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:textSize="23sp"
                        android:text="@string/Address"
                        android:gravity="center_horizontal"
                        android:layout_margin="8dp"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/bank"
                        android:layout_marginStart="15dp"
                        android:padding="5dp"
                        />


                    <TextView
                        android:id="@+id/indurstry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:textSize="23sp"
                        android:text="@string/Institute"
                        android:gravity="center_horizontal"
                        android:layout_margin="8dp"
                        />





                </LinearLayout>

                </LinearLayout>


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>



</RelativeLayout>